# blackhole-visualizer

./: README.md  main.py  pyproject.toml  style.qss
modules/: controls.py  monitor.py  renderer.py  simulation.py
